@@ -890,3 +890,7 @@
 2012-01-05  ChunEon Park <hermet@hermet.pe.kr>
 
         * Added a label signal callback "slide,end"
+
+2013-01-06  Jaehyun Cho <jae_hyun_cho@naver.com>
+
+        * Fix omitting signal emission when customized text parts change the text.
